fixes (#50)
* fix photo deleting

* fixes

* fixes

* change scrollbar background

* increase status bar changing timeout

* fix desktop error modal

* add petition title in post

* fixes

* fixes

--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -21,18 +21,17 @@ body {
 
 /* total width */
 *::-webkit-scrollbar {
-  background-color:#fff;
-  width: 10px
+  background-color: transparent;
+  width: 6px
 }
 
 *::-webkit-scrollbar-track {
-  background-color: #fff
+  background-color: transparent;
 }
 
 *::-webkit-scrollbar-thumb {
   background-color: #babac0;
   border-radius: 16px;
-  border: 2px solid #fff
 }
 
 *::-webkit-scrollbar-button {
